--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -32,6 +32,13 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:src="@drawable/baseline_delete_24" />
+        <ImageView
+            android:id="@+id/updatebutton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="70dp"
+            android:src="@drawable/baseline_edit_24" />
 
 
 
